	Bank system (OpenTibia SVN, Elf)
	Stamina system (Elf)
	Moved players record and motd to database (Elf)
	Moved CTRL + Z bug reports to database, written /reports command (Elf)
	OTBv3 (OpenTibia SVN, Talaturen, Elf)
	Monsters with elemental weaknesses (Marcinek Paladinek, Lithium)
	Marriage 'system' (Elf)
	Construction kits (Elf)
	Global events (Elf)
	Thing attribute changing (Kiper)
]

[ Deprecated
	[ Note
		All deprecated Lua functions are stored in compat.lua and use their equivalents, nevertheless please use proper ones for new scripts.
	]

	Command: !kills, use !frags.
	Command: /clean, use /clean from talkactions
	Command: /pos, use /pos from talkactions
	Command: /q, use /q from talkactions
	Command: /B, use #b or /b from talkactions
	Command: /b, use violation window for banning
	Command: /pvp, use /pvp from talkactions
	LuaFunction: savePlayers(), use saveData().
	LuaFunction: doPlayerAddMana(cid, mana), use doCreatureAddMana(cid, mana)
	LuaFunction: broadcastMessage(cid, type), use doBroadcastMessage(cid, type)
	LuaFunction: getPlayerPosition(cid), use getCreaturePosition(cid)
	LuaFunction: getPlayerName(cid), use getCreatureName(cid)
	LuaFunction: getCreaturePos(cid) [fake], use getCreaturePosition(cid)
	LuaFunction: saveData(), use saveServer()
	LuaFunction: doPlayerRemovePremiumDays(cid, days), use: doPlayerAddPremiumDays(cid, -days) [negative values]
	LuaFunction: doPlayerRemOutfit(cid, looktype, addons), use: doPlayerRemoveOutfit(cid, looktype, addons)
	LuaFunction: doSetCreatureDropLoot(cid, doDrop), use: doCreatureSetDropLoot(cid, doDrop)
]

[ MySQL Update Queries
	CREATE TABLE `server_motd`
	(
		`id` INT NOT NULL AUTO_INCREMENT,
		`text` TEXT NOT NULL,
		PRIMARY KEY (`id`)
	) ENGINE = InnoDB;

	CREATE TABLE `server_record`
	(
		`record` INT NOT NULL,
		`timestamp` BIGINT NOT NULL,
		PRIMARY KEY (`timestamp`)
	) ENGINE = InnoDB;

	CREATE TABLE `global_storage`
	(
		`key` INT UNSIGNED NOT NULL,
		`value` INT NOT NULL,
		PRIMARY KEY  (`key`)