@@ -33,8 +33,9 @@ enum CreatureEventType_t
 	CREATURE_EVENT_THINK,
 	CREATURE_EVENT_ADVANCE,
 	CREATURE_EVENT_LOOK,
-	CREATURE_EVENT_DEATH,
-	CREATURE_EVENT_KILL
+	CREATURE_EVENT_ATTACK,
+	CREATURE_EVENT_KILL,
+	CREATURE_EVENT_DEATH
 };
 
 class CreatureEvent;
@@ -84,10 +85,11 @@ class CreatureEvent : public Event
 		uint32_t executeOnLogin(Player* player);
 		uint32_t executeOnLogout(Player* player);
 		uint32_t executeOnThink(Creature* creature, uint32_t interval);
-		uint32_t executeOnAdvance(Player* player, skills_t skill, uint32_t oldlevel, uint32_t newlevel);
+		uint32_t executeOnAdvance(Player* player, skills_t skill, uint32_t oldLevel, uint32_t newLevel);
 		uint32_t executeOnLook(Player* player, const Position& position, uint8_t stackpos);
-		uint32_t executeOnDeath(Creature* creature, Item* corpse, Creature* killer);
+		uint32_t executeOnAttack(Creature* creature, Creature* target);
 		uint32_t executeOnKill(Creature* creature, Creature* target);
+		uint32_t executeOnDeath(Creature* creature, Item* corpse, Creature* killer);
 		//
 
 	protected:
@@ -98,4 +100,4 @@ class CreatureEvent : public Event
 		bool m_isLoaded;
 };
 
-#endif // __OTSERV_CREATUREEVENT_H__
+#endif
